--- a/mern-backend/package.json
+++ b/mern-backend/package.json
@@ -11,7 +11,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.19.0",
-    "mongoose": "^8.0.0"
+    "mongoose": "^8.0.0",
+    "sweetalert2": "^11.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
