--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@fontsource/inter": "^5.2.6",
     "@fontsource/quicksand": "^5.2.8",
     "@heroicons/react": "^2.2.0",
+    "@stripe/react-stripe-js": "^3.9.0",
+    "@stripe/stripe-js": "^7.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
+    "stripe": "^18.4.0",
     "sweetalert2": "^11.22.4"
   },
   "devDependencies": {
