--- a/mern-backend/package.json
+++ b/mern-backend/package.json
@@ -8,16 +8,21 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@types/multer": "^2.0.0",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.19.0",
     "mongoose": "^8.0.0",
+    "multer": "^2.0.2",
+    "streamifier": "^0.1.1",
     "sweetalert2": "^11.22.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
+    "@types/streamifier": "^0.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.0"
   }
