--- a/mern-backend/package.json
+++ b/mern-backend/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.19.0",
+    "framer-motion": "^12.23.12",
     "mongoose": "^8.0.0",
     "multer": "^2.0.2",
     "streamifier": "^0.1.1",
